--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Meccawee Tours and Travel</title>
+    <title>Meccawee Tours&Travel</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -70,7 +70,7 @@
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
             <a href="" class="navbar-brand p-0">
-                <h1 class="text-primary m-0"><img src="img/Meccawee-Logo-Icon" alt="Logo"></i>Meccawee</h1>
+                <h1 class="text-primary m-0"><img src="img/Meccawee-Logo-Icon" alt="Logo"></i>Meccawee Tours&Travel</h1>
                 
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
