changes of various tabs hotels,about booking contact and destination index.html

--- a/about.html
+++ b/about.html
@@ -49,16 +49,16 @@
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
                     <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>5th Floor, Shem Plaza, Lusaka Road, Opp ASL Hardware, Nairobi, Kenya</small>
                     <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+254-727-446-252</small>
-                    <small class="text-light"><i class="fa fa-envelope-open me-2"></i>info@meccaweetoursandtravel.com</small>
+                    <small class="text-light"><i class="fa fa-envelope-open me-2"></i>meccaweetnt@gmail.com</small>
                 </div>
             </div>
             <div class="col-lg-4 text-center text-lg-end">
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i class="fab fa-twitter fw-normal"></i></a>
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i class="fab fa-facebook-f fw-normal"></i></a>
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i class="fab fa-linkedin-in fw-normal"></i></a>
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i class="fab fa-instagram fw-normal"></i></a>
-                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle" href=""><i class="fab fa-youtube fw-normal"></i></a>
+                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href="https://x.com/MeccaweeT" target="_blank"><i class="fab fa-twitter fw-normal"></i></a>
+                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href="https://www.facebook.com/meccawee"><i class="fab fa-facebook-f fw-normal"></i></a>
+                    <!---a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href=""><i class="fab fa-linkedin-in fw-normal"></i></a------->
+                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle me-2" href="https://www.instagram.com/meccaweetours" target="_blank"><i class="fab fa-instagram fw-normal"></i></a>
+                    <a class="btn btn-sm btn-outline-light btn-sm-square rounded-circle" href="https://www.youtube.com/@MeccaweeToursandTravel" target="_blank"><i class="fab fa-youtube fw-normal"></i></a>
                 </div>
             </div>
         </div>
@@ -69,8 +69,8 @@
     <!-- Navbar & Hero Start -->
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
-            <a href="" class="navbar-brand p-0">
-                <h1 class="text-primary m-0"><i class="fa fa-map-marker-alt me-3"></i>Meccawee Tours and Travel</h1>
+            <a href="index.html" class="navbar-brand p-0">
+                <h1 class="text-primary m-0"><img src="img/Meccawee-Logo-Icon" alt="Logo"><!--i class="fa fa-map-marker-alt me-3"--></i>Meccawee Tours and Travel</h1>
                 <!-- <img src="img/logo.png" alt="Logo"> -->
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -87,9 +87,9 @@
                         <div class="dropdown-menu m-0">
                             <a href="destination.html" class="dropdown-item">Destination</a>
                             <a href="booking.html" class="dropdown-item">Booking</a>
-                            <a href="team.html" class="dropdown-item">Travel Guides</a>
+                            <a href="featuredhotels.html" class="dropdown-item">Travel Guides</a>
                             <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                            <a href="404.html" class="dropdown-item">404 Page</a>
+                            <a href="Airticketing.html" class="dropdown-item">AirTicketing</a>
                         </div>
                     </div>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -124,14 +124,14 @@
             <div class="row g-5">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="img-fluid position-absolute w-100 h-100" src="img/about.jpg" alt="" style="object-fit: cover;">
+                        <img class="img-fluid position-absolute w-100 h-100" src="img/honeymoon.png" alt="" style="object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <h6 class="section-title bg-white text-start text-primary pe-3">About Us</h6>
                     <h1 class="mb-4">Welcome to <span class="text-primary">Meccawee Tours and Travel</span></h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                    <p class="mb-4">We have a friendly and highly experienced team which is dedicated in delivering wonderful travel experiences across East Africa top tour destinations and global destinations. </p>
+                    <p class="mb-4">We are a duly registered limited company with the head office in Nairobi, Kenya and we have been in operations since 2017</p>
                     <div class="row gy-2 gx-4 mb-4">
                         <div class="col-sm-6">
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>First Class Flights</p>
@@ -152,7 +152,7 @@
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>24/7 Service</p>
                         </div>
                     </div>
-                    <a class="btn btn-primary py-3 px-5 mt-2" href="">Read More</a>
+                    <a class="btn btn-primary py-3 px-5 mt-2" href="index.html">Read More</a>
                 </div>
             </div>
         </div>
@@ -164,23 +164,24 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center text-primary px-3">Travel Guide</h6>
-                <h1 class="mb-5">Meet Our Guide</h1>
+                <h6 class="section-title bg-white text-center text-primary px-3">Featured Hotels</h6>
+                <h1 class="mb-5">Five Star Hotels</h1>
             </div>
             <div class="row g-4">
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item">
                         <div class="overflow-hidden">
-                            <img class="img-fluid" src="img/team-1.jpg" alt="">
+                            <img class="img-fluid" src="img/neptune-village-beach.jpg" alt="">
                         </div>
+
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -19px;">
-                            <a class="btn btn-square mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-square mx-1" href=""><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-square mx-1" href=""><i class="fab fa-instagram"></i></a>
+                            <!--a class="btn btn-square mx-1" href=""><i class="fab fa-facebook-f"></i></a---->
+                            <!--a class="btn btn-square mx-1" href=""><i class="fab fa-twitter"></i></a>
+                            <!--a class="btn btn-square mx-1" href=""><i class="fab fa-instagram"></i></a----->
                         </div>
                         <div class="text-center p-4">
-                            <h5 class="mb-0">Full Name</h5>
-                            <small>Designation</small>
+                            <h5 class="mb-0">Neptune Beach Hotel</h5>
+                            <small>Mombasa</small>
                         </div>
                     </div>
                 </div>
@@ -190,9 +191,9 @@
                             <img class="img-fluid" src="img/team-2.jpg" alt="">
                         </div>
                         <div class="position-relative d-flex justify-content-center" style="margin-top: -19px;">
-                            <a class="btn btn-square mx-1" href=""><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-square mx-1" href=""><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-square mx-1" href=""><i class="fab fa-instagram"></i></a>
+                            <!--a class="btn btn-square mx-1" href=""><i class="fab fa-facebook-f"></i></a>
+                            <!--a class="btn btn-square mx-1" href=""><i class="fab fa-twitter"></i></a>
+                            <!--a class="btn btn-square mx-1" href=""><i class="fab fa-instagram"></i></a-->
                         </div>
                         <div class="text-center p-4">
                             <h5 class="mb-0">Full Name</h5>
@@ -254,7 +255,7 @@
                     <h4 class="text-white mb-3">Contact</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>5th Floor, Shem Plaza, Lusaka Road, Opp ASL Hardware, Nairobi, Kenya</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+254-727-446-2520</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@meccaweetoursandtravel.com</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>meccaweetnt@gmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
