--- a/package.html
+++ b/package.html
@@ -49,7 +49,7 @@
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
                     <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>5th Floor, Shem Plaza, Lusaka Road, Opp ASL Hardware, Nairobi, Kenya</small>
                     <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+254-727-446-252</small>
-                    <small class="text-light"><i class="fa fa-envelope-open me-2"></i>info@meccaweetoursandtravel.com</small>
+                    <small class="text-light"><i class="fa fa-envelope-open me-2"></i>meccaweetnt@gmail.com</small>
                 </div>
             </div>
             <div class="col-lg-4 text-center text-lg-end">
@@ -339,7 +339,7 @@
                     <h4 class="text-white mb-3">Contact</h4>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>5th Floor, Shem Plaza, Lusaka Road, Opp ASL Hardware, Nairobi, Kenya</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+254-727-446-2520</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@meccaweetoursandtravel.com</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>meccaweetnt@gmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
